--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 body, input, button, textarea, select, h1, .word-box, .result-item, #wpmDisplay, .correct-overlay {
   font-family: 'Poppins', "Inter", Arial, sans-serif;
