add poppins font to the announcement

--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ button:active {
   opacity: 0.5;
   font-size: 13px;
   color: #fff;
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
   text-align: center;
   z-index: 999;
   pointer-events: none;
