Change background color of howToPlayPopup

--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ button:active {
 
 #howToPlayPopup {
   position: absolute;
-  background: #ff3b3b;
+  background: #195bc8;
   color: white;
   padding: 15px;
   border-radius: 0;
