--- a/style.css
+++ b/style.css
@@ -285,14 +285,18 @@ button:active {
 
 .connector-line {
   width: 2px;
-  height: 40px;
+  height: 50px;
   background: repeating-linear-gradient(
     to bottom,
-    #ffffff,
-    #ffffff 4px, 
-    transparent 4px,   
-    transparent 8px 
+    #ffffff 0px,
+    #ffffff 2px,
+    transparent 2px,
+    transparent 4px
   );
-  margin: 0 auto; 
+  position: relative;
+  top: -25px;
+  margin: 0 auto;
+  z-index: 1;
 }
+
 
