--- a/style.css
+++ b/style.css
@@ -326,3 +326,10 @@ button:active {
   transform: scale(0.97);
 }
 
+.small-logo {
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+  margin: 0;
+  padding: 0;
+
