--- a/style.css
+++ b/style.css
@@ -333,3 +333,31 @@ button:active {
   margin: 0;
   padding: 0;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 480px;
+  text-align: center;
+}
+
+.icons {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.lgbtq-icon,
+.trans-icon {
+  width: 18px;
+  height: 18px;
+}
+
+.lgbtq-icon svg,
+.trans-icon svg {
+  width: 100%;
+  height: 100%;
+}
+
