--- a/style.css
+++ b/style.css
@@ -333,3 +333,10 @@ button:active {
   margin: 0;
   padding: 0;
 }
+
+.announcement-icon {
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+    margin-right: 8px;
+}
