--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   text-align: center;
   background: linear-gradient(145deg, #151515, #1b1b1b);
   padding: 40px;
-  border-radius: 0px
+  border-radius: 0px;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
   transition: transform 0.2s ease;
 }
