--- a/style.css
+++ b/style.css
@@ -426,3 +426,28 @@ button:active {
   opacity: 0.5;
   font-size: 0.8em;
 }
+
+#giveUpBtn {
+  background-color: #0f4db8;
+  color: #fff;
+  border: none;
+  font-size: 1.05rem;
+  font-weight: 600;
+  border-radius: 6px;
+  height: 45px;
+  line-height: 45px;
+  padding: 0 25px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  cursor: not-allowed;
+  pointer-events: none;
+  opacity: 0.9;
+  transition: none;
+}
+
+#giveUpBtn svg {
+  width: 16px;
+  height: 16px;
+  vertical-align: middle;
+}
