add annoumcemnt style.css for mobile app

--- a/mobile/style.css
+++ b/mobile/style.css
@@ -209,3 +209,28 @@ button:active {
   vertical-align: middle;
   margin-left: 5px;
 }
+
+.announcement {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0.5;
+  font-size: 13px;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
+  z-index: 999;
+  pointer-events: auto;
+    text-decoration: underline;
+}
+
+.announcement a {
+  color: white;
+  text-decoration: none;
+  pointer-events: auto;
+}
+
+.announcement a:hover {
+  color: #f0f0f0;
+}
