--- a/classic/style.css
+++ b/classic/style.css
@@ -36,7 +36,7 @@ h1 {
 /* Word box */
 .word-box {
   height: 100px;
-  background-color: #1e293b;
+  background-color: ##0f2e10;
   border-radius: 0;
   margin-bottom: 25px;
   display: flex;
@@ -50,7 +50,7 @@ h1 {
 }
 
 .word-box:hover {
-  background-color: #253447;
+  background-color: #4caf50;
 }
 
 /* Input + button section */
@@ -78,7 +78,7 @@ input[type="text"] {
 
 input[type="text"]:focus {
   box-shadow: 0 0 0 2px #4caf50;
-  background-color: #22354c;
+  background-color: #0f2e10;
 }
 
 /* Buttons */
@@ -107,7 +107,7 @@ button:active {
 
 /* Result list */
 .result-item {
-  background-color: #1e293b;
+  background-color: #0f2e10;
   margin: 6px 0;
   padding: 10px 14px;
   border-radius: 0;
@@ -119,7 +119,7 @@ button:active {
 }
 
 .result-item:hover {
-  background-color: #273b52;
+  background-color: #0f2e10;
 }
 
 /* Correct overlay */
