--- a/classic/style.css
+++ b/classic/style.css
@@ -36,7 +36,7 @@ h1 {
 /* Word box */
 .word-box {
   height: 100px;
-  background-color: ##0f2e10;
+  background-color: #0f2e10;
   border-radius: 0;
   margin-bottom: 25px;
   display: flex;
